--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
   "checkjs": true,
-  "compilerOptions": {
-    "baseUrl": "."
-  },
-  "include": ["."]
+  // "compilerOptions": {
+  //   "baseUrl": "."
+  // },
+  // "include": ["."]
 }
