--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@types/next": "^9.0.0",
     "classnames": "^2.2.6",
     "next": "10.0.5",
